creusot/tests/should_fail/opaque.stderr
error[creusot]: Cannot make `"x::priv_symbol"` transparent in `"x::bad"` as it would call a less-visible item.
  --> opaque.rs:17:9
   |
17 |         priv_symbol()
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

